<resources>
    <string name="app_name">ImplicitIntents</string>
    <string name="web_hint">http://cornhub.com</string>
    <string name="website_btn_text">Open Website</string>
    <string name="location_hint">Latham, MA</string>
    <string name="location_btn_text">Open Location</string>
    <string name="share_text_hint">If you\'re funky bring your monkey</string>
    <string name="share_text_btn_text">Share this text</string>
    <string name="share_text_text">Share this text with:</string>
    <string name="picture_btn_text">Take a picture</string>
</resources>
