<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/website_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/web_hint"
                android:inputType="textUri"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/website_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/website_btn_text"
                android:onClick="openWebsite"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/location_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/location_hint"
                android:inputType="textPersonName"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/location_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_btn_text"
                android:onClick="openLocation"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/share_text_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/share_text_hint"
                android:inputType="textPersonName"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/share_text_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/share_text_btn_text"
                android:onClick="shareText"/>
        </LinearLayout>

        <Button
            android:id="@+id/picture_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/picture_btn_text"
            android:onClick="openCamera"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>